fixed right aligned index-overview

--- a/ui/assets/css/sidebar-layout.css
+++ b/ui/assets/css/sidebar-layout.css
@@ -177,7 +177,6 @@ html,body{
 
 .sidebar-menu .logo-env{
 	padding:30px 30px;
-	border-bottom:1px solid #004455;
 }
 
 .sidebar-menu .logo-env .logo{
